--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
     z-index: 10;
+    background: rgb(10,10,10);
+    background: linear-gradient(90deg, rgba(10,10,10,1) 0%, rgba(79,116,128,1) 88%, rgba(17,81,107,1) 100%);
 
 }
 
@@ -109,7 +107,7 @@
 }
 
 .title {
-    margin-top: 270px;
+    margin-top: 150px;
 }
 
 .title h1 {
